# mlpg

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: Catch2.cmake  eigen.cmake  imgui-glfw-glad-glm.cmake  implot.cmake  project_options.cmake  spdlog.cmake
src/: CMakeLists.txt
src/Data/: CMakeLists.txt  filesystem.h  load_csv.h
src/Data/include/Data/: filesystem.h  load_csv.h  load_data.h
src/ann/: Activations.h  CMakeLists.txt  Config.h  Helper.h  LinearAnn.cpp  LinearAnn.h  TemplateAnn.h  ViewCmd.h
src/ann/include/: Activations.h  CostFunctions.h  Network.h
src/ann/include/ann/: Config.h  Network.h  Serialize.h  Shuffle_data.h  TemplateAnn.h  utilities.h
src/data/: CMakeLists.txt  manip.h
src/environments/: Tictactoe.h
src/environments/Tictactoe/: impl.cpp  tictactoe.h
src/tests/: CMakeLists.txt
src/tests/ann/: CMakeLists.txt  Function.h  FunctionExampleData.h  plot.py  testAnnFunction.cpp  testDataGen.cpp  testLinearAnn.cpp  test_network_setup.cpp  test_perceptron.cpp  test_serialize.cpp
src/tests/imgui/: CMakeLists.txt  basicannimgui.cpp  testannimgui.cpp
src/tests/replay/: test_random_replay.cpp
src/utils/: rand.h  stopwatch.h
src/viewer/: CMakeLists.txt  example.cpp
src/viewer/imgui/: use_imgui.cpp  use_imgui.h
